--- a/certifications.html
+++ b/certifications.html
@@ -39,6 +39,107 @@
     </div>
   </nav>
 
+  <section class="certifications">
+    <div class="cert-container">
+        <h2>Certifications and Awards</h2>
+
+        <!-- Capital Markets Badge -->
+        <div class="cert-item">
+            <div class="cert-header">
+                <h3>Ace this Case – Capital Markets Badge</h3>
+                <p class="institution">Ted Rogers School of Management (TRSM)</p>
+                <p class="description">Awarded for completion of a 3-session series on Capital Markets preparation</p>
+            </div>
+            <div class="key-learnings">
+                <h4>Key Learnings and Skills Developed:</h4>
+                <ul>
+                    <li>Gained in-depth knowledge of the Capital Markets industry, including technical and behavioral interview strategies.</li>
+                    <li>Learned to analyze publicly-traded companies using the CapIQ platform, focusing on essential data for stock pitches.</li>
+                    <li>Developed skills to prepare and deliver compelling stock pitches, receiving real-time feedback from experienced members of the Ted Rogers Investment Council (TRIC).</li>
+                    <li>Strengthened preparation techniques for securing roles in Capital Markets through mentorship from senior TRSM students with co-op experience.</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- ADaPT Program -->
+        <div class="cert-item">
+            <div class="cert-header">
+                <h3>Advanced Digital and Professional Training (ADaPT) Program</h3>
+                <p class="institution">Toronto Metropolitan University's Diversity Institute, in partnership with the Ontario Chamber of Commerce (OCC)</p>
+                <p class="description">Completed an intensive 5-week digital and professional upskilling program</p>
+            </div>
+            <div class="key-learnings">
+                <h4>Key Modules and Skills Acquired:</h4>
+                <ul>
+                    <li>Search Engine Optimization (SEO): Fundamental techniques for improving online visibility and digital presence.</li>
+                    <li>Quantitative Methods with Excel: Advanced data analysis and quantitative problem-solving using Microsoft Excel.</li>
+                    <li>Project Management: Introduction to project planning, execution, and time management principles.</li>
+                    <li>Communication & Business Writing: Enhanced written, verbal, and presentation skills for professional settings.</li>
+                    <li>Creativity & Problem-Solving: Practical approaches to innovation, teamwork, and resilience-building.</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Digital Marketing Bootcamp -->
+        <div class="cert-item">
+            <div class="cert-header">
+                <h3>Digital Marketing Bootcamp</h3>
+                <p class="institution">Jelly Academy</p>
+                <p class="description">Completed a comprehensive program on key digital marketing strategies and tools</p>
+            </div>
+            <div class="key-learnings">
+                <h4>Key Skills and Learning Outcomes:</h4>
+                <ul>
+                    <li>Digital Marketing Fundamentals: Differentiated digital marketing from traditional approaches in modern business contexts.</li>
+                    <li>Social Media & Content Creation: Developed strategies for impactful content creation, social media management, and public relations.</li>
+                    <li>SEO & Paid Ads: Gained proficiency in search engine optimization (SEO), social media ads, and Google Ads.</li>
+                    <li>Customer Journey Mapping: Analyzed and optimized customer buying experiences using journey mapping techniques.</li>
+                    <li>Google Analytics & Automation: Learned to utilize Google Analytics for data-driven decisions and implemented email marketing automation.</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Excel Badge -->
+        <div class="cert-item">
+            <div class="cert-header">
+                <h3>Power of Excel: Business Fundamentals Badge 2.0</h3>
+                <p class="description">Completed Levels 1-3 in an Excel Mastery Series</p>
+            </div>
+            <div class="key-learnings">
+                <h4>Key Skills and Competencies:</h4>
+                <div class="excel-levels">
+                    <div class="level">
+                        <h5>Level 1:</h5>
+                        <ul>
+                            <li>Created and formatted dynamic spreadsheets using static and dynamic formulas.</li>
+                            <li>Utilized basic functions: Math & trig (SUM, AVERAGE), text (UPPER, LOWER), date/time (YEAR, MONTH).</li>
+                            <li>Applied lookup and reference formulas (VLOOKUP, TRANSPOSE).</li>
+                            <li>Visualized data with charts, tables, and conditional formatting.</li>
+                        </ul>
+                    </div>
+                    <div class="level">
+                        <h5>Level 2:</h5>
+                        <ul>
+                            <li>Implemented data validation for dropdown menus and input controls.</li>
+                            <li>Combined advanced logic functions (IF, OR, AND) and used Index-Match-Match lookups.</li>
+                            <li>Performed what-if analyses using Goal Seek and data tables.</li>
+                            <li>Conducted troubleshooting (e.g., circular references).</li>
+                        </ul>
+                    </div>
+                    <div class="level">
+                        <h5>Level 3:</h5>
+                        <ul>
+                            <li>Designed interactive dashboards with PivotTables, PivotCharts, and slicers.</li>
+                            <li>Utilized advanced formatting tools (sparklines, conditional formats).</li>
+                            <li>Gained introductory knowledge of VBA (Visual Basic for Applications), PowerPivot, and PowerQuery.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
   <!-- Footer with Contact and Social Links -->
   <footer>
     <div class="footer-content">
