--- a/portfolio.html
+++ b/portfolio.html
@@ -6,6 +6,7 @@
   <title>Portfolio/Works</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
   <!-- Header with Name and Main Navigation -->
@@ -133,6 +134,17 @@
         <a href="contact.html">Contact Page</a>
         <a href="https://www.linkedin.com/in/jonathan-lin-755706212/" target="_blank">LinkedIn</a>
       </div>
+    </div>
+    <div class="social-icons">
+        <a href="https://www.linkedin.com/YOUR_PROFILE" target="_blank" class="social-icon">
+            <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://www.instagram.com/YOUR_PROFILE" target="_blank" class="social-icon">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.facebook.com/YOUR_PROFILE" target="_blank" class="social-icon">
+            <i class="fab fa-facebook"></i>
+        </a>
     </div>
   </footer>
 </body>
