--- a/resume.html
+++ b/resume.html
@@ -82,14 +82,17 @@
         <a href="https://www.linkedin.com/in/jonathan-lin-755706212/" target="_blank">LinkedIn</a>
       </div>
       <div class="social-icons">
-        <a href="https://www.linkedin.com/YOUR_PROFILE" target="_blank" class="social-icon">
+        <a href="https://www.linkedin.com/in/jonathan-lin-755706212/" target="_blank" class="social-icon" aria-label="LinkedIn">
           <i class="fab fa-linkedin"></i>
         </a>
-        <a href="https://www.instagram.com/YOUR_PROFILE" target="_blank" class="social-icon">
+        <a href="https://www.instagram.com/jonathanplin_/" target="_blank" class="social-icon" aria-label="Instagram">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://www.facebook.com/YOUR_PROFILE" target="_blank" class="social-icon">
+        <a href="https://www.facebook.com/jonathan.lin.6/" target="_blank" class="social-icon" aria-label="Facebook">
           <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://x.com/jonathanplin" target="_blank" class="social-icon" aria-label="X (Twitter)">
+          <i class="fab fa-x-twitter"></i>
         </a>
       </div>
     </div>
