--- a/about.html
+++ b/about.html
@@ -36,9 +36,9 @@
     <a href="about.html">About Me</a>
     <a href="contact.html">Contact</a>
     <div class="social-links">
-      <a href="https://facebook.com">Facebook</a>
-      <a href="https://linkedin.com">LinkedIn</a>
-      <a href="https://twitter.com">Twitter</a>
+      <a href="https://www.facebook.com/jonathan.lin.6/">Facebook</a>
+      <a href="https://www.linkedin.com/in/jonathan-lin-755706212/">LinkedIn</a>
+      <a href="https://x.com/jonathanplin">X</a>
     </div>
   </nav>
 
