--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="intro">
       <img src="my-professional-photo.jpeg" alt="My Professional Picture" class="profile-pic">
       <div class="bio">
-        <h1>Welcome to Jonathan Lin's Website</h1>
+        <h1>A Little Background Info...</h1>
         <br>
         <p>I am currently a fifth-year Business Technology Management student in the Ted Rogers School of Management co-op program at Toronto Metropolitan University. I aspire to be part of a team with values that align with my own and I believe all experiences have the potential to pave the way to success. I made it my objective to learn and develop skills to better serve the industry as well as provide myself with a sense of satisfaction in personal growth.</p>
       </div>
