--- a/index.html
+++ b/index.html
@@ -103,23 +103,62 @@
     </div>
   </section>
 
-  <!-- Education Section -->
-  <section class="education">
-    <div class="scroll-content">
-      <h2>Education</h2>
-      <br>
-      <h4>Bachelor of Commerce - Business Technology Management w/ Co-op Distinction</h4>
-      <p>Ted Rogers School of Management, Toronto Metropolitan University </p>
+  <!-- Education and Skills Section -->
+  <section class="education-skills">
+    <!-- Education Section -->
+    <div class="education-container">
+        <h2>Education</h2>
+        <div class="education-card">
+            <div class="school-info">
+                <h3>Toronto Metropolitan University</h3>
+                <p class="program">Bachelor of Commerce - Business Technology Management</p>
+                <p class="duration">2021 - 2025</p>
+            </div>
+            <div class="education-details">
+                <p class="gpa">CGPA: 3.67/4.33</p>
+                <ul class="achievements">
+                    <li>Dean's List 2021-2022</li>
+                    <li>Dean's List 2022-2023</li>
+                </ul>
+            </div>
+        </div>
     </div>
-  </section>
 
-  <!-- Skills Section -->
-  <section class="skills">
-    <h2>Skills</h2>
-    <br>
-    <p>Communication, Problem-Solving, Teamwork, Decision Making, Leadership, Critical Thinking, Working Under Pressure, Time Management</p>
-    <br>
-    <p><b>Technical Skills: </b>Adobe Photoshop, Microsoft Office (Access, Word, PowerPoint), Microsoft Excel (COUNTIF, VLOOKUP, Pivot Tables), IBM SPSS, R, Microsoft SQL, HTML5, CSS3, JavaScript, Python, and adaptive to new technological skills.</p>
+    <!-- Skills Section -->
+    <div class="skills-container">
+        <h2>Technical Skills</h2>
+        <div class="skills-grid">
+            <div class="skill-category">
+                <h3>Programming Languages</h3>
+                <div class="skill-items">
+                    <span class="skill-tag">Python</span>
+                    <span class="skill-tag">Java</span>
+                    <span class="skill-tag">HTML</span>
+                    <span class="skill-tag">CSS</span>
+                    <span class="skill-tag">JavaScript</span>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h3>Software & Tools</h3>
+                <div class="skill-items">
+                    <span class="skill-tag">Microsoft Office</span>
+                    <span class="skill-tag">Visual Studio Code</span>
+                    <span class="skill-tag">GitHub</span>
+                    <span class="skill-tag">Figma</span>
+                </div>
+            </div>
+
+            <div class="skill-category">
+                <h3>Databases</h3>
+                <div class="skill-items">
+                    <span class="skill-tag">MySQL</span>
+                    <span class="skill-tag">MongoDB</span>
+                    <span class="skill-tag">PostgreSQL</span>
+                </div>
+            </div>
+        </div>
+    </div>
   </section>
 
   <!-- Footer with Contact and Social Links -->
