--- a/index.html
+++ b/index.html
@@ -126,41 +126,53 @@
 
     <!-- Skills Section -->
     <div class="skills-container">
-        <h2>Technical Skills</h2>
-        <div class="skills-grid">
-            <div class="skill-category">
-                <h3>Programming Languages</h3>
-                <div class="skill-items">
-                    <span class="skill-tag">Python</span>
-                    <span class="skill-tag">Java</span>
-                    <span class="skill-tag">HTML</span>
-                    <span class="skill-tag">CSS</span>
-                    <span class="skill-tag">JavaScript</span>
-                </div>
-            </div>
-
-            <div class="skill-category">
-                <h3>Software & Tools</h3>
-                <div class="skill-items">
-                    <span class="skill-tag">Microsoft Office</span>
-                    <span class="skill-tag">Visual Studio Code</span>
-                    <span class="skill-tag">GitHub</span>
-                    <span class="skill-tag">Figma</span>
-                </div>
-            </div>
-
-            <div class="skill-category">
-                <h3>Databases</h3>
-                <div class="skill-items">
-                    <span class="skill-tag">MySQL</span>
-                    <span class="skill-tag">MongoDB</span>
-                    <span class="skill-tag">PostgreSQL</span>
-                </div>
-            </div>
-        </div>
-    </div>
+      <h2>Technical Skills</h2>
+      <div class="skills-grid">
+          <div class="skill-category">
+              <h3>Programming & Data Analysis</h3>
+              <div class="skill-items">
+                  <span class="skill-tag">Python</span>
+                  <span class="skill-tag">R</span>
+                  <span class="skill-tag">HTML</span>
+                  <span class="skill-tag">CSS</span>
+                  <span class="skill-tag">JavaScript</span>
+                  <span class="skill-tag">SQL</span>
+              </div>
+          </div>
+  
+          <div class="skill-category">
+              <h3>Microsoft Office Suite</h3>
+              <div class="skill-items">
+                  <span class="skill-tag">Excel</span>
+                  <span class="skill-tag">Word</span>
+                  <span class="skill-tag">PowerPoint</span>
+                  <span class="skill-tag">Access</span>
+                  <span class="skill-tag">Outlook</span>
+              </div>
+          </div>
+  
+          <div class="skill-category">
+              <h3>Data Visualization & Analytics</h3>
+              <div class="skill-items">
+                  <span class="skill-tag">Tableau</span>
+                  <span class="skill-tag">Power BI</span>
+                  <span class="skill-tag">SPSS</span>
+                  <span class="skill-tag">Google Analytics</span>
+              </div>
+          </div>
+  
+          <div class="skill-category">
+              <h3>Digital Marketing</h3>
+              <div class="skill-items">
+                  <span class="skill-tag">SEO</span>
+                  <span class="skill-tag">Social Media Management</span>
+                  <span class="skill-tag">Content Creation</span>
+                  <span class="skill-tag">Email Marketing</span>
+              </div>
+          </div>
+      </div>
+  </div>
   </section>
-
   <!-- Footer with Contact and Social Links -->
   <footer>
     <div class="footer-content">
