--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
             <img src="my-professional-photo.jpeg" alt="My Professional Picture" class="profile-pic">
             <div class="bio">
                 <h1>A Little About Me...</h1>
-                <br>
-                <p>I am currently a fifth-year Business Technology Management student in the Ted Rogers School of Management co-op program at Toronto Metropolitan University. I aspire to be part of a team with values that align with my own and I believe all experiences have the potential to pave the way to success. I made it my objective to learn and develop skills to better serve the industry as well as provide myself with a sense of satisfaction in personal growth.</p>
+                <p>Hello! I'm Jonathan Lin, a third-year Business Technology Management student at Toronto Metropolitan University. I'm passionate about bridging the gap between business strategy and technological innovation.</p>
+                
+                <p>With a strong foundation in both business and technology, I'm constantly seeking opportunities to apply my knowledge in real-world scenarios. My academic journey has equipped me with skills in data analysis, project management, and digital transformation.</p>
+                
+                <p>I believe in the power of continuous learning and am always eager to take on new challenges that help me grow both personally and professionally. Whether it's through coursework, internships, or extracurricular activities, I strive to make meaningful contributions while expanding my skill set.</p>
             </div>
         </div>
     </div>
