--- a/index.html
+++ b/index.html
@@ -53,16 +53,42 @@
   <!-- Welcome Section -->
   <section class="welcome">
     <div class="welcome-container">
-        <h2>Welcome to Jonathan Lin's Website</h2>
-        <div class="introduction">
-            <img src="my-professional-photo.jpeg" alt="My Professional Picture" class="profile-pic">
-            <div class="bio">
-                <h1>A Little About Me...</h1>
-                <p>Hello! I'm Jonathan Lin, a third-year Business Technology Management student at Toronto Metropolitan University. I'm passionate about bridging the gap between business strategy and technological innovation.</p>
+        <h2>Welcome to My Portfolio</h2>
+        <div class="welcome-content">
+            <div class="welcome-text">
+                <p class="welcome-intro">
+                    I'm a third-year Business Technology Management student at Toronto Metropolitan University, passionate about bridging the gap between business strategy and technological innovation.
+                </p>
                 
-                <p>With a strong foundation in both business and technology, I'm constantly seeking opportunities to apply my knowledge in real-world scenarios. My academic journey has equipped me with skills in data analysis, project management, and digital transformation.</p>
-                
-                <p>I believe in the power of continuous learning and am always eager to take on new challenges that help me grow both personally and professionally. Whether it's through coursework, internships, or extracurricular activities, I strive to make meaningful contributions while expanding my skill set.</p>
+                <div class="welcome-highlights">
+                    <div class="highlight-item">
+                        <i class="fas fa-graduation-cap"></i>
+                        <div class="highlight-text">
+                            <h3>Academic Excellence</h3>
+                            <p>Maintaining a strong CGPA of 3.67/4.33 with consistent Dean's List recognition</p>
+                        </div>
+                    </div>
+
+                    <div class="highlight-item">
+                        <i class="fas fa-chart-line"></i>
+                        <div class="highlight-text">
+                            <h3>Business Acumen</h3>
+                            <p>Combining technical expertise with strong business fundamentals and analytical skills</p>
+                        </div>
+                    </div>
+
+                    <div class="highlight-item">
+                        <i class="fas fa-laptop-code"></i>
+                        <div class="highlight-text">
+                            <h3>Technical Proficiency</h3>
+                            <p>Skilled in various programming languages, data analysis tools, and business software</p>
+                        </div>
+                    </div>
+                </div>
+
+                <p class="welcome-outro">
+                    Through my academic journey and practical experiences, I've developed a unique perspective on how technology can drive business
+                </p>
             </div>
         </div>
     </div>
