--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
   <section id="about" class="about-section">
     <div class="aboutme">
       <img src="IMG_9746.jpg" alt="OutdoorsPic" class="outdoors-pic">
+      <p class="photo-caption">A picture of me hiking in Ilkley, Northern England</p>
       <div class = aboutmetext>
         <h1>Beyond Business and Tech: My Story</h1>
         <br>
