--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     <div class="aboutme">
       <div class="photo-container">
         <img src="IMG_9746.jpg" alt="OutdoorsPic" class="outdoors-pic">
-        <p class="photo-caption">A picture of me hiking in Ilkley, Northern England</p>
+        <p class="photo-caption">A picture of me hiking in Ilkley, Northern England (Spring, 2024)</p>
       </div>
       <div class="aboutmetext">
         <h1>Beyond Business and Tech: My Story</h1>
