--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <!-- Header with Name and Main Navigation -->
   <header>
     <div class="left-section">
-      <div id = "menuIcon" class="menu-icon" onclick="toggleMenu()">☰</div>
+      <button class="menu-icon" aria-label="Toggle navigation menu">
+        <i class="fas fa-bars"></i>
+      </button>
       <a href="index.html" class="name">Jonathan Lin</a> <!-- Link to index.html -->
   </div>
     </div>
