--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <!-- Header with Name and Main Navigation -->
   <header>
     <div class="left-section">
-      <button class="menu-icon" aria-label="Toggle navigation menu">
+      <button class="menu-icon" aria-label="Toggle navigation menu" aria-expanded="false">
         <i class="fas fa-bars"></i>
       </button>
       <a href="index.html" class="name">Jonathan Lin</a> <!-- Link to index.html -->
