--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="home-content">
             <div class="home-text">
                 <p class="greeting">Hello 👋!</p>
-                <h1>I'm Jonathan Lin</h1>
+                <h2>Hi, I'm Jonathan</h2>
                 <p class="title">A fifth-year Business Technology Management student at Toronto Metropolitan University.</p>
                 
                 <div class="description">
