--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jonathan Lin's Portfolio</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Jonathan Lin - Business Technology Management student at Toronto Metropolitan University. Specializing in data analysis, project management, and digital transformation.">
+  <meta name="keywords" content="Jonathan Lin, Business Technology Management, Toronto Metropolitan University, TMU, data analysis, project management, digital transformation, technology student">
+  <meta name="author" content="Jonathan Lin">
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Jonathan Lin's Portfolio">
+  <meta property="og:description" content="Business Technology Management student specializing in bridging business strategy and technology innovation.">
+  <meta property="og:image" content="my-professional-photo.jpeg">
+  <meta property="og:url" content="https://jonathanlin.github.io">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Jonathan Lin's Portfolio">
+  <meta name="twitter:description" content="Business Technology Management student specializing in bridging business strategy and technology innovation.">
+  <meta name="twitter:image" content="my-professional-photo.jpeg">
+  
+  <title>Jonathan Lin's Portfolio | Business Technology Management Student</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
