--- a/about.html
+++ b/about.html
@@ -4,7 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Get to know Jonathan Lin - A Business Technology Management student at TMU with a passion for outdoor adventures, technology, and continuous learning.">
+  <meta name="keywords" content="Jonathan Lin about, TMU student profile, business technology management, outdoor enthusiast, tech student Toronto">
+  <meta name="author" content="Jonathan Lin">
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="About Jonathan Lin | Beyond Business and Tech">
+  <meta property="og:description" content="Discover the person behind the professional - From hiking adventures to technology projects, learn more about Jonathan Lin's journey.">
+  <meta property="og:image" content="IMG_9746.jpg">
+  <meta property="og:url" content="https://jonathanlin.github.io/about">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="About Jonathan Lin">
+  <meta name="twitter:description" content="TMU student passionate about business technology, outdoor adventures, and continuous learning.">
+  <meta name="twitter:image" content="IMG_9746.jpg">
+  
+  <title>About Jonathan Lin | Business Technology Management Student</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
