--- a/certifications.html
+++ b/certifications.html
@@ -3,7 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Certifications & Awards</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Explore Jonathan Lin's certifications and awards in Business Technology Management, including Capital Markets, Digital Marketing, and Excel proficiency achievements.">
+  <meta name="keywords" content="Jonathan Lin certifications, TMU student awards, Capital Markets Badge, ADaPT Program, Digital Marketing certification, Excel proficiency">
+  <meta name="author" content="Jonathan Lin">
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Jonathan Lin's Certifications & Awards | Business Technology Management">
+  <meta property="og:description" content="View Jonathan Lin's professional certifications in Capital Markets, Digital Marketing, and Advanced Excel, showcasing expertise in business technology.">
+  <meta property="og:url" content="https://jonathanlin.github.io/certifications">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Jonathan Lin's Professional Certifications">
+  <meta name="twitter:description" content="Discover Jonathan Lin's achievements in Business Technology Management, including specialized training in Capital Markets and Digital Marketing.">
+  
+  <title>Jonathan Lin's Certifications & Awards | Business Technology Management Student</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
