--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Me</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Contact Jonathan Lin - Business Technology Management student at TMU. Get in touch for opportunities, collaborations, or questions.">
+  <meta name="keywords" content="contact Jonathan Lin, TMU student contact, business technology management contact, Toronto tech student">
+  <meta name="author" content="Jonathan Lin">
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Contact Jonathan Lin | Get in Touch">
+  <meta property="og:description" content="Reach out to discuss opportunities, collaborations, or any questions about business technology and digital transformation.">
+  <meta property="og:url" content="https://jonathanlin.github.io/contact">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Contact Jonathan Lin">
+  <meta name="twitter:description" content="Get in touch with Jonathan Lin - Business Technology Management student at TMU.">
+  
+  <title>Contact Jonathan Lin | Business Technology Management Student</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
