--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resume and CVs</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="View Jonathan Lin's professional resume - Business Technology Management student at TMU with experience in IT, marketing, and data analytics.">
+  <meta name="keywords" content="Jonathan Lin resume, TMU student CV, business technology management resume, Toronto tech student CV">
+  <meta name="author" content="Jonathan Lin">
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Jonathan Lin's Resume | Business Technology Management">
+  <meta property="og:description" content="Download or view Jonathan Lin's professional resume showcasing experience in IT, marketing, and business technology.">
+  <meta property="og:url" content="https://jonathanlin.github.io/resume">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Jonathan Lin's Professional Resume">
+  <meta name="twitter:description" content="TMU student with experience in IT, marketing, and business technology. View or download resume.">
+  
+  <title>Jonathan Lin's Resume | Business Technology Management Student</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
