--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio/Works</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Explore Jonathan Lin's professional portfolio - Featuring work experience at Green Infrastructure Partners, Ontario Chamber of Commerce, and leadership roles at TMU.">
+  <meta name="keywords" content="Jonathan Lin portfolio, TMU student work, IT internship, business technology projects, DECA TMU">
+  <meta name="author" content="Jonathan Lin">
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Jonathan Lin's Portfolio | Professional Experience">
+  <meta property="og:description" content="View Jonathan Lin's work experience in IT, marketing, and business technology, including internships and leadership roles.">
+  <meta property="og:url" content="https://jonathanlin.github.io/portfolio">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Jonathan Lin's Professional Portfolio">
+  <meta name="twitter:description" content="IT and business technology professional showcasing work experience and leadership roles.">
+  
+  <title>Jonathan Lin's Portfolio | Business Technology Management Student</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
